# Geometric-Algorithm-Library

./: CMakeLists.txt  README.md  setup.sh
include/: LineSegmentIntersection.h  PointInPolygon.h  ScaningLineAlgorythm.h  convex_hull.h  delaunay.h  findIntersection.h  point_line.h  polygonArea.h
src/: LineSegmentIntersection.cpp  PointInPolygon.cpp  ScaningLineAlgorythm.cpp  a.out  convex_hull.cpp  delaunay.cpp  findIntersection.cpp  main.cpp  point_line.cpp  polygonArea.cpp
